<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.a13acdhmwcustomviewandviewgroup.CustomCardView
        android:id="@+id/custom_card_view_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:iv_poster="@drawable/image_movie_poster_boss_baby"
        app:tv_category="@string/category_the_boss_baby"
        app:rating_bar="3.0"
        app:tv_price="@string/price_the_boss_bay"
        app:tv_title="@string/title_the_boss_baby" />

    <Button
        android:id="@+id/btn_set_new_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/custom_card_view_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/custom_card_view_first"
        app:layout_constraintBottom_toBottomOf="@id/custom_card_view_first"
        android:text="@string/set_new_info"/>

    <Button
        android:id="@+id/btn_go_to_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/activity_main_btn_go_to_fun"
        android:text="@string/go_to_fun"/>

</androidx.constraintlayout.widget.ConstraintLayout>